# SimpleAhhGame

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: shader.frag  shader.vert
src/: Logger.cpp  Logger.h  Math.h  Shader.cpp  Shader.h  main.cpp
